--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ Jinja2==3.1.2
 joblib==1.2.0
 lightgbm==3.3.5
 MarkupSafe==2.1.2
-numpy==1.24.2
+numpy
 pycodestyle==2.10.0
 scikit-learn==1.2.2
 scipy==1.10.1
