--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-autopep8==2.0.2
-click==8.1.3
-colorama==0.4.6
-Flask==2.2.3
-gunicorn==20.1.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.2.0
-lightgbm==3.3.5
-MarkupSafe==2.1.2
+autopep8
+click
+colorama
+Flask
+gunicorn
+itsdangerous
+Jinja2
+joblib
+lightgbm
+MarkupSafe
 numpy
-pycodestyle==2.10.0
-scikit-learn==1.2.2
-scipy==1.10.1
-threadpoolctl==3.1.0
-Werkzeug==2.2.3
+pycodestyle
+scikit-learn
+scipy
+threadpoolctl
+Werkzeug
